[gd_scene load_steps=22 format=2]

[ext_resource path="res://sprites/Personagem/Char_Idle/Main_Idle.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/Personagem/Char_Run/Char_Run2.png" type="Texture" id=3]
[ext_resource path="res://sprites/Personagem/Char_Run/Char_Run1.png" type="Texture" id=4]
[ext_resource path="res://sprites/Personagem/Char_Run/Char_Run3.png" type="Texture" id=5]
[ext_resource path="res://sprites/Personagem/Char_Run/Char_Run4.png" type="Texture" id=6]
[ext_resource path="res://sprites/Personagem/Glock_Char/Glock_Animation1.png" type="Texture" id=7]
[ext_resource path="res://sprites/Personagem/AK_Char/AK_AnimationChar2.png" type="Texture" id=8]
[ext_resource path="res://scripts/BulletStart.gd" type="Script" id=9]
[ext_resource path="res://sprites/Personagem/Glock_Char/Glock_Animation3.png" type="Texture" id=10]
[ext_resource path="res://sprites/Personagem/AK_Char/AK_AnimationChar1.png" type="Texture" id=11]
[ext_resource path="res://sprites/Personagem/Glock_Char/Glock_Animation2.png" type="Texture" id=12]
[ext_resource path="res://sprites/Personagem/Shotgun_Char/shotgun3.png" type="Texture" id=13]
[ext_resource path="res://sprites/Personagem/Shotgun_Char/shotgun2.png" type="Texture" id=14]
[ext_resource path="res://sprites/Personagem/Shotgun_Char/shotgun1.png" type="Texture" id=15]
[ext_resource path="res://assets/Musicas/Effects/Shot_Glock.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/Musicas/Effects/Shot__shotgun.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/Musicas/Effects/Shot_AK.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/Musicas/Effects/damage.wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "Shotgun_Shot",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 8 ) ],
"loop": false,
"name": "AK_Shot",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "Glock_Shot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 45.7754 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2147483653
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.582148, 0.543118 )
frames = SubResource( 1 )
animation = "Idle"

[node name="BulletStart" type="Node2D" parent="AnimatedSprite" groups=[
"position",
]]
position = Vector2( 79.752, -1.42115 )
scale = Vector2( 1.71778, 1.84122 )
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = -2147483647
shape = SubResource( 2 )

[node name="Shot_Shotgun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = -30.0

[node name="Shot_AK" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = -30.0

[node name="Shot_Glock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = -30.0

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
